# pyrefact

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  version.py  version.txt
.github/: dependabot.yml
.github/workflows/: check.yml  unittests.yml
pyrefact/: __init__.py  __main__.py  abstractions.py  completion.py  constants.py  core.py  fixes.py  formatting.py  known_packages.json  logs.py  main.py  object_oriented.py  package_aliases.json  package_variables.json  parsing.py  pattern_matching.py  performance.py  performance_numpy.py  performance_pandas.py  processing.py  python_keywords.json  sql.py  style.py  symbolic_math.py  tracing.py
tests/: delete_pointless_statements.py  delete_unused_functions.py  has_side_effect.py  integration_test_cases.py  integration_test_format_code.py  integration_test_format_file.py  is_blocking.py  main.py  main_profile.py  numpy.sh  removing_unused_variables.py  rename_variables.py  string_parsing_example.py  test_abstractions.py  test_add_missing_imports.py  test_early_continue.py  test_early_return.py  test_hash_node.py  test_implicit_dot.py  test_implicit_matmul.py  test_inline_math_comprehensions.py  test_move_imports_to_toplevel.py  test_redundant_elses.py  test_remove_redundant_comprehensions.py  test_remove_redundant_iter.py  test_replace_for_loops_with_comprehensions.py  test_replace_functions_with_literals.py  test_replace_subscript_looping.py  test_simplify_math_iterators.py  test_simplify_matrix_operations.py  test_simplify_transposes.py  test_singleton_comparison.py  test_sorted_heapq.py  test_swap_if_else.py  test_unravel_classes.py  testing_infra.py
tests/integration/: integration_test_cases.py  test_format_code.py  test_format_code_safe.py  test_format_file.py  test_imports.py  test_tracing.py
tests/integration/tracing_test_files/: a.py  b.py  c.py  d.py  e.py
tests/unit/: remove_redundant_boolop_values.py  test_abstractions.py  test_add_missing_imports.py  test_align_variable-names_with_convention.py  test_breakout_common_code_in_ifs.py  test_breakout_starred_args.py  test_deinterpolate_logging_args.py  test_delete_commented_code.py  test_delete_pointless_statements.py  test_delete_unreachable_code.py  test_delete_unused_functions_and_classes.py  test_early_continue.py  test_early_return.py  test_fix_duplicate_imports.py  test_fix_if_assign.py  test_fix_if_return.py  test_fix_import_spacing.py  test_fix_raise_missing_from.py  test_fix_reimported_names.py  test_fix_starred_imports.py  test_fix_unconventional_class_definitions.py  test_format_sql.py  test_has_side_effect.py  test_hash_node.py  test_ignore_comments.py  test_implicit_defaultdict.py  test_implicit_dict_keys_values_items.py  test_implicit_dot.py  test_implicit_matmul.py  test_inline_math_comprehensions.py  test_invalid_escape_sequence.py  test_is_blocking.py  test_is_sql_syntax.py  test_literal_value.py  test_match_template.py  test_merge_chained_comps.py  test_merge_nested_comprehensions.py  test_missing_context_manager.py  test_move_before_loop.py  test_move_imports_to_toplevel.py  (+58 more)
