[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrefact"
version = "100"
description = "Automated Python refactoring"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {email = "olle.ln@outlook.com"},
    {name = "Olle Lindgren"}
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "black>=23.1.0",
    "compactify>=2",
    "rmspace>=7",
    "sympy>=1.11.0",
    'astunparse==1.6.3; python_version<"3.9"',
    'tomli>=2.0.0; python_version<"3.11"'
]

[project.optional-dependencies]
dev = ["astunparse==1.6.3", "ruff==0.7.2"]

[project.urls]
repository="https://github.com/OlleLindgren/pyrefact"

[project.scripts]
pyrefact = "pyrefact.__main__:main"
pyrefind = "pyrefact.pattern_matching:pyrefind_main"
pyreplace = "pyrefact.pattern_matching:pyreplace_main"

[tool.setuptools.packages.find]
include = ["pyrefact*"]

[tool.black]
skip_magic_trailing_comma = true
line_length = 100

[tool.pyrefact]
line_length = 100
