[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrefact"
version = "100"
description = "Automated Python refactoring"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {email = "olle.ln@outlook.com"},
    {name = "Olle Lindgren"}
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "black>=23.1.0",
    "compactify>=2",
    "rmspace>=7",
    "sympy>=1.11.0",
    'tomli>=2.0.0; python_version<"3.11"',
]

[project.optional-dependencies]
dev = ["ruff==0.11.12"]

[project.urls]
repository="https://github.com/OlleLindgren/pyrefact"

[project.scripts]
pyrefact = "pyrefact.__main__:main"
pyrefind = "pyrefact.pattern_matching:pyrefind_main"
pyreplace = "pyrefact.pattern_matching:pyreplace_main"

[tool.setuptools.packages.find]
include = ["pyrefact*"]

[tool.black]
skip_magic_trailing_comma = true
line_length = 100

[tool.pyrefact]
line_length = 100

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_literal_value.py" = ["F403", "E711", "E712"]
"tests/unit/test_trace_origin.py" = ["F403"]
"tests/integration/tracing_test_files/a.py" = ["F401"]
"tests/integration/tracing_test_files/b.py" = ["F403"]
"tests/integration/tracing_test_files/c.py" = ["F401"]
"tests/integration/tracing_test_files/d.py" = ["F401", "E402"]
"tests/integration/tracing_test_files/e.py" = ["F821"]
